# c-basic-commands

./: CMakeLists.txt  main.c
alocacao-de-memoria/: caloc.c  maloc.c  realoc.c
basic/: estruturas-decisao.c  repetition-structures.c  switch.c  variables.c
binaries/: bynary.c
data-types/: data-types.c  matematical-operations.c
functions/: functions.c  prototipos.c
pointers/: array-pointers.c  pointers.c  using-pointers.c
structs/: alias.c  enum.c  structs.c  uniao.c
vectors/: matrix.c  vectors.c
